[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ultility/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/LPC_Spiders/spider02.png" type="Texture" id=2]
[ext_resource path="res://Ultility/HealthComp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/StaticEnemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 16 )

[node name="StaticEnemy" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -2 )
texture = ExtResource( 2 )
hframes = 10
vframes = 5
frame = 1

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="HealthComp" parent="." instance=ExtResource( 3 )]

[node name="PickUp" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PickUp"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="shoot" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="receive_damaged" from="Hurtbox" to="." method="_on_Hurtbox_receive_damaged"]
[connection signal="health_changed" from="HealthComp" to="." method="_on_HealthComp_health_changed"]
[connection signal="area_entered" from="PickUp" to="." method="_on_PickUp_area_entered"]
[connection signal="area_shape_entered" from="PickUp" to="." method="_on_PickUp_area_shape_entered"]
[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
